hyperion pools and positions
